--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,173 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: rgb(255, 255, 255);
+  --foreground: rgb(16, 26, 35);
+  --card: rgb(216, 253, 253);
+  --card-foreground: rgb(16, 26, 35);
+  --popover: rgb(255, 255, 255);
+  --popover-foreground: rgb(16, 26, 35);
+  --primary: rgb(16, 156, 255);
+  --primary-foreground: rgb(255, 255, 255);
+  --secondary: rgb(16, 26, 35);
+  --secondary-foreground: rgb(255, 255, 255);
+  --muted: rgb(229, 229, 230);
+  --muted-foreground: rgb(16, 26, 35);
+  --accent: rgb(223, 235, 250);
+  --accent-foreground: rgb(16, 156, 255);
+  --destructive: rgb(255, 22, 32);
+  --destructive-foreground: rgb(255, 255, 255);
+  --border: rgb(193, 194, 195);
+  --input: rgb(246, 249, 251);
+  --ring: rgb(16, 160, 255);
+  --chart-1: rgb(16, 156, 255);
+  --chart-2: rgb(0, 184, 125);
+  --chart-3: rgb(255, 192, 32);
+  --chart-4: rgb(0, 214, 100);
+  --chart-5: rgb(255, 5, 78);
+  --sidebar: rgb(247, 248, 248);
+  --sidebar-foreground: rgb(16, 26, 35);
+  --sidebar-primary: rgb(16, 156, 255);
+  --sidebar-primary-foreground: rgb(255, 255, 255);
+  --sidebar-accent: rgb(223, 235, 250);
+  --sidebar-accent-foreground: rgb(16, 156, 255);
+  --sidebar-border: rgb(222, 232, 240);
+  --sidebar-ring: rgb(16, 160, 255);
+  --font-sans: Merriweather, serif;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --radius: 0.075rem;
+  --shadow-2xs: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.09);
+  --shadow-xs: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.09);
+  --shadow-sm: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 1px 2px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 1px 2px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-md: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 2px 4px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-lg: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 4px 6px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-xl: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 8px 10px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-2xl: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.43);
+  --tracking-normal: 0.025em;
+  --spacing: 0.25rem;
+}
+
+.dark {
+  --background: rgb(0, 0, 0);
+  --foreground: rgb(230, 233, 235);
+  --card: rgb(26, 27, 35);
+  --card-foreground: rgb(217, 217, 217);
+  --popover: rgb(0, 0, 0);
+  --popover-foreground: rgb(230, 233, 235);
+  --primary: rgb(79, 15, 255);
+  --primary-foreground: rgb(255, 255, 255);
+  --secondary: rgb(239, 243, 245);
+  --secondary-foreground: rgb(16, 26, 35);
+  --muted: rgb(24, 24, 24);
+  --muted-foreground: rgb(112, 118, 124);
+  --accent: rgb(1, 28, 50);
+  --accent-foreground: rgb(13, 155, 255);
+  --destructive: rgb(255, 22, 32);
+  --destructive-foreground: rgb(255, 255, 255);
+  --border: rgb(35, 38, 41);
+  --input: rgb(29, 48, 65);
+  --ring: rgb(16, 160, 255);
+  --chart-1: rgb(16, 156, 255);
+  --chart-2: rgb(0, 184, 125);
+  --chart-3: rgb(255, 192, 32);
+  --chart-4: rgb(0, 214, 100);
+  --chart-5: rgb(255, 5, 78);
+  --sidebar: rgb(22, 23, 29);
+  --sidebar-foreground: rgb(217, 217, 217);
+  --sidebar-primary: rgb(16, 160, 255);
+  --sidebar-primary-foreground: rgb(255, 255, 255);
+  --sidebar-accent: rgb(1, 28, 50);
+  --sidebar-accent-foreground: rgb(13, 155, 255);
+  --sidebar-border: rgb(52, 68, 81);
+  --sidebar-ring: rgb(16, 160, 255);
+  --font-sans: Merriweather, serif;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --radius: 0.075rem;
+  --shadow-2xs: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.09);
+  --shadow-xs: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.09);
+  --shadow-sm: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 1px 2px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 1px 2px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-md: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 2px 4px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-lg: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 4px 6px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-xl: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.17), 0px 8px 10px -1.5px hsl(203.8494 100% 53.1373% / 0.17);
+  --shadow-2xl: 0px 2px 20px -0.5px hsl(203.8494 100% 53.1373% / 0.43);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: var(--tracking-normal);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
